--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^24.9.1",
     "@types/jwt-decode": "^2.2.1",
     "@types/node": "^12.12.54",
+    "@types/query-string": "^6.3.0",
     "@types/react": "^16.9.48",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
