--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/query-string": "^6.3.0",
     "@types/react": "^16.9.48",
     "@types/react-dom": "^16.9.8",
+    "@types/react-icons": "^3.0.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux-actions": "^2.6.1",
