--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^24.9.1",
     "@types/jwt-decode": "^2.2.1",
     "@types/node": "^12.12.54",
+    "@types/proj4": "^2.5.0",
     "@types/query-string": "^6.3.0",
     "@types/react": "^16.9.48",
     "@types/react-dom": "^16.9.8",
@@ -18,8 +19,10 @@
     "@types/redux-actions": "^2.6.1",
     "axios": "^0.20.0",
     "comfortable-google-map-react-types": "^1.2.1",
+    "google-maps-react": "^2.0.6",
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.14.1",
+    "proj4": "^2.6.2",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-cookie": "^4.0.3",
