--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux-actions": "^2.6.1",
+    "@uiw/react-md-editor": "^1.14.5",
     "axios": "^0.20.0",
     "comfortable-google-map-react-types": "^1.2.1",
     "google-maps-react": "^2.0.6",
